<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <TableLayout
            android:id="@+id/mainTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            android:shrinkColumns="1"
            android:stretchColumns="*" >

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dip"
                        android:src="@drawable/logo" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/app_name_caps"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timing_select"
                    android:textSize="18sp" >
                </TextView>

                <Spinner
                    android:id="@+id/spinnerTiming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_select"
                    android:textSize="18sp" >
                </TextView>

                <Spinner
                    android:id="@+id/spinnerDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delay_select"
                    android:textSize="18sp" >
                </TextView>

                <Spinner
                    android:id="@+id/spinnerDelay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/button_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dip"
                        android:paddingRight="15dip"
                        android:text="@string/button_add"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/button_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dip"
                        android:paddingRight="15dip"
                        android:text="@string/button_view"
                        android:textSize="18sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="15dip" >

                    <ToggleButton
                        android:id="@+id/onOffButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textOff="@string/toggle_turn_off"
                        android:textOn="@string/toggle_turn_on"
                        android:textSize="18sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:paddingTop="0dip" >

                    <ImageView
                        android:id="@+id/about"
                        android:layout_width="20dip"
                        android:layout_height="20dip"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/about_selector" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</LinearLayout>